# cliasi

./: README.md  examples.py  pyproject.toml  setup.py
src/cliasi/: __init__.py  animation.py  cliasi.py  clisi.py  constants.py
tests/: test_cliasi.py
