[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool]
dynamic = ["version"]
name = "cliasi"
description = "Have a nice looking, simple cli in seconds"

[project]
name = "cliasi"
dynamic = ["version"]
authors = [
    { name="Qrashi", email="fritz@vibe.ac" },
]
description = "Have a nice looking, simple cli in seconds"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"